@startuml
entity User {
   * id
   - name
   - passwordHash
}

entity Device{
   * id
   - name
   - brand
}

entity InstallAt {
   * id
   - installDate
   - removeDate
   -  description
}

entity Room{
    * id
    - roomName
    - roomNumber
}

User ||--|| InstallAt
Device ||--|| InstallAt
InstallAt ||--|| Room

@enduml
